--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.11.1",
     "swiper": "^11.1.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
